--- a/css/mainV.css
+++ b/css/mainV.css
@@ -1,21 +1,72 @@
+@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Griffy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  padding: 0;
+  margin: 0; }
+
+/* Header */
+#header {
+  background-color: #f8f8f8;
+  margin: 0;
+  padding: 0; }
+
+.logoP, .maslogos {
+  display: flex;
+  align-items: center; }
+  .logoP img, .maslogos img {
+    width: 180px;
+    height: 180px; }
+
+.maslogos {
+  justify-content: space-around; }
+  .maslogos img {
+    width: 40px;
+    height: 40px;
+    margin: 3px 0px 3px 0px; }
+  .maslogos .menu {
+    width: 130px;
+    height: 60px; }
+  .maslogos button {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    border: solid #0e788d85 1px; }
+    .maslogos button:hover {
+      background: linear-gradient(to right, #0e788d85, #19ffff98);
+      border: solid #25645a 1px; }
+    .maslogos button p {
+      font-size: 16px;
+      margin: 4px 0px 6px 5px;
+      color: black; }
+
 * {
   margin: 0;
   border: 0;
-  font-family: Arial, Helvetica, sans-serif; }
+  font-family: "Poppins", sans-serif; }
 
 h1 {
-  text-align: center;
-  color: red; }
+  color: black;
+  text-align: center; }
 
 p {
-  color: red; }
+  color: black;
+  text-align: center; }
+
+.padre1 {
+  background-color: #ffffff;
+  width: 100%;
+  border: 90px; }
+
+.padre2 {
+  background-color: #ffffff;
+  width: 100%; }
 
 h2 {
   text-align: center;
   color: white; }
 
 .contvol {
-  background-color: #0004fc;
+  background-color: #049fa1;
   height: 450px;
   width: 440px;
   margin-left: 800px;
@@ -29,7 +80,7 @@ h2 {
   text-align: left; }
 
 .contvol-2 {
-  background-color: #0004fc;
+  background-color: #049fa1;
   height: 450px;
   width: 440px;
   margin-left: 200px;
@@ -40,7 +91,7 @@ h2 {
   border-radius: 15px; }
 
 .contvol-3 {
-  background-color: #0004fc;
+  background-color: #049fa1;
   height: 550px;
   width: 440px;
   margin-left: 800px;
@@ -50,15 +101,31 @@ h2 {
 .img3 {
   border-radius: 15px; }
 
-.equipoCH {
-  background-color: #0004fc;
+.gibaBR {
   width: 100%;
-  margin-top: 15px; }
+  display: flex;
+  justify-content: center;
+  background-color: #049fa1; }
 
-.equipoEU {
-  background-color: #0004fc; }
+.regoBR {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: #049fa1; }
 
-.equipoBR {
-  width: 50%;
-  margin-left: 300px;
-  margin-top: 15px; }
+.karchEEUU {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: #049fa1; }
+
+.jugadores {
+  text-align: center; }
+
+.canchas {
+  text-align: center; }
+
+.mapa {
+  display: flex;
+  justify-content: center;
+  background-color: #049fa1; }
