--- a/scss/mainV.scss
+++ b/scss/mainV.scss
@@ -1,14 +1,26 @@
+@import "menu";
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Griffy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0;
     border: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 h1{
+    color: rgb(0, 0, 0);
     text-align: center;
-    color: rgb(255, 0, 0);
 }
 p{
-    color: rgb(255, 0, 0);
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
+.padre1{
+    background-color: #ffffff;
+    width: 100%;
+    border: 90px;
+}
+.padre2{
+    background-color: #ffffff;
+    width: 100%;
 }
 h2{
     text-align: center;
@@ -16,7 +28,7 @@ h2{
 }
 
 .contvol{
-    background-color: rgb(0, 4, 252);
+    background-color: #049fa1;
     height: 450px;
     width: 440px;
     margin-left: 800px;
@@ -30,7 +42,7 @@ h2{
     text-align: left; 
 }
 .contvol-2{
-    background-color: rgb(0, 4, 252);
+    background-color: #049fa1;
     height: 450px;
     width: 440px;
     margin-left: 200px;
@@ -42,7 +54,7 @@ h2{
 }
 
 .contvol-3{
-    background-color: rgb(0, 4, 252);
+    background-color: #049fa1;
     height: 550px;
     width: 440px;
     margin-left: 800px;
@@ -53,6 +65,32 @@ h2{
     border-radius: 15px;
 }
 
-.contevol-4{
-    
+.gibaBR{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #049fa1;
+}
+.regoBR{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #049fa1;
+}
+.karchEEUU{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: #049fa1;
+}
+.jugadores{
+    text-align: center;
+}
+.canchas{
+    text-align: center;
+}
+.mapa{
+    display: flex;
+    justify-content: center;
+    background-color: #049fa1;
 }
