--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 
 /* Header */
 #header {
-  background-color: #f0f0f0;
+  background-color: #f8f8f8;
   margin: 0;
   padding: 0; }
 
@@ -19,106 +19,169 @@
   justify-content: space-around; }
   .maslogos img {
     width: 40px;
-    height: 40px; }
+    height: 40px;
+    margin: 3px 0px 3px 0px; }
   .maslogos .menu {
     width: 130px;
     height: 60px; }
   .maslogos button {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    border: solid black 1px; }
+    border: solid #0e788d85 1px; }
     .maslogos button:hover {
       background: linear-gradient(to right, #0e788d85, #19ffff98);
-      border: solid #25645a 1px;
-      transform: translate(1.1, 1.1px); }
+      border: solid #25645a 1px; }
     .maslogos button p {
-      font-size: 20px;
+      font-size: 16px;
       margin: 4px 0px 6px 5px;
       color: black; }
 
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  /*box-sizing: border-box;*/ }
 
 #body {
-  background: gray; }
+  background: gray;
+  overflow: hidden; }
 
-.contPrin-carrousel {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, 0%);
-  width: 1000px;
-  height: 600px;
-  background: #f5f5f5;
-  box-shadow: 0 30px 50px #dbdbdb; }
-  .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo {
-    width: 200px;
-    height: 300px;
+/*.contPrin-carrousel{
     position: absolute;
     top: 50%;
-    transform: translate(0, -50%);
-    border-radius: 20px;
-    box-shadow: 0 30px 50px #505050;
-    background-position: 50% 50%;
-    background-size: cover;
-    display: inline-block;
-    transition: 0.5s; }
-    .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo .contPrin-carrousel-slide-fondo-info {
-      position: absolute;
-      top: 50%;
-      left: 100px;
-      width: 300px;
-      text-align: left;
-      color: #eee;
-      transform: translate(0, -50%);
-      font-family: system-ui;
-      display: none; }
-  .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(1), .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(2) {
-    top: 0;
-    left: 0;
-    transform: translate(0, 0);
-    border-radius: 0;
-    width: 100%;
-    height: 100%; }
-  .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(2) .contPrin-carrousel-slide-fondo-info {
-    display: block; }
-    .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(2) .contPrin-carrousel-slide-fondo-info .contPrin-carrousel-slide-fondo-info-nombre {
-      font-size: 40px;
-      text-transform: uppercase;
-      font-weight: bold;
-      opacity: 0;
-      animation: animar ease-in-out 0.2s 1 forwards; }
-    .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(2) .contPrin-carrousel-slide-fondo-info .contPrin-carrousel-slide-fondo-info-descripcion {
-      margin-top: 10px;
-      margin-bottom: 20px;
-      opacity: 0;
-      animation: animar ease-in-out 0.3s 1 forwards; }
-    .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(2) .contPrin-carrousel-slide-fondo-info button {
-      padding: 10px 20px;
-      border: none;
-      cursor: pointer;
-      opacity: 0;
-      animation: animar ease-in-out 0.6s 1 forwards; }
-  .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(3) {
-    left: 50%; }
-  .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(4) {
-    left: calc(50% + 220px); }
-  .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(5) {
-    left: calc(50% + 440px); }
-  .contPrin-carrousel .contPrin-carrousel-slide .contPrin-carrousel-slide-fondo:nth-child(n + 6) {
-    left: calc(50% + 660px);
-    opacity: 0; }
+    left: 50%;
+    transform: translate(-50%, 0%);
+    width: 1000px;
+    height: 600px;
+    background: #f5f5f5;
+    box-shadow: 0 30px 50px #dbdbdb;
+    
+    .contPrin-carrousel-slide{
+
+        .contPrin-carrousel-slide-fondo{
+            width: 200px;
+            height: 300px;
+            position: absolute;
+            top: 50%;
+            transform: translate(0, -50%);
+            border-radius: 20px;
+            box-shadow: 0 30px 50px #505050;
+            background-position: 50% 50%;
+            background-size: cover;
+            display: inline-block;
+            transition: 0.5s;
+            .contPrin-carrousel-slide-fondo-info{
+                position: absolute;
+                top: 50%;
+                left: 100px;
+                width: 300px;
+                text-align: left;
+                color: #eee;
+                transform: translate(0, -50%);
+                font-family: system-ui;
+                display: none;
+            }
+        }
+        .contPrin-carrousel-slide-fondo:nth-child(1){
+            top: 0;
+            left: 0;
+            transform: translate(0, 0);
+            border-radius: 0;
+            width: 100%;
+            height: 100%;
+            
+        }
+        .contPrin-carrousel-slide-fondo:nth-child(2){
+            @extend .contPrin-carrousel-slide-fondo:nth-child(1);
+            
+            .contPrin-carrousel-slide-fondo-info{
+                display: block;
+                .contPrin-carrousel-slide-fondo-info-nombre{
+                    font-size: 40px;
+                    text-transform: uppercase;
+                    font-weight: bold;
+                    opacity: 0;
+                    animation: animar ease-in-out 0.2s 1 forwards;
+                }
+                .contPrin-carrousel-slide-fondo-info-descripcion{
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                    opacity: 0;
+                    animation: animar ease-in-out 0.3s 1 forwards;
+                }
+                button{
+                    padding: 10px 20px;
+                    border: none;
+                    cursor: pointer;
+                    opacity: 0;
+                    animation: animar ease-in-out 0.6s 1 forwards;
+                }
+            }
+        }
+
+        .contPrin-carrousel-slide-fondo:nth-child(3){
+            left: 50%;
+        }
+        .contPrin-carrousel-slide-fondo:nth-child(4){
+            left: calc(50% + 220px);
+        }
+        .contPrin-carrousel-slide-fondo:nth-child(5){
+            left: calc(50% + 440px);
+        }
+        .contPrin-carrousel-slide-fondo:nth-child(n + 6){
+            left: calc(50% + 660px);
+            opacity: 0;
+        }
+
+            
+    }
+}
 
 @keyframes animar {
-  from {
-    opacity: 0;
-    transform: translate(0, 100px);
-    filter: blur(33px); }
-  to {
-    opacity: 1;
-    transform: translate(0);
-    filter: blur(0); } }
+    from{
+        opacity: 0;
+        transform: translate(0, 100px);
+        filter: blur(33px);
+    }
+    to{
+        opacity: 1;
+        transform: translate(0);
+        filter: blur(0);
+    }
+}*/
+#margen {
+  margin: 0;
+  padding: 0; }
+
+.cont-info1 {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 200px;
+  background-color: #1f1f1f;
+  text-align: center; }
+  .cont-info1 h1 {
+    color: white;
+    transition: transform 0.3s ease, text-shadow 0.3s ease; }
+    .cont-info1 h1:hover {
+      transform: scale(1.1);
+      text-shadow: 4px 4px 6px rgba(255, 221, 221, 0.7); }
+  .cont-info1 p {
+    padding: 0 10% 0 10%;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease, text-shadow 0.3s ease; }
+    .cont-info1 p:hover {
+      transform: scale(1.1);
+      text-shadow: 4px 4px 6px rgba(255, 221, 221, 0.7); }
+
+.cont-decoracion {
+  background-color: #1f1f1f; }
+
+@media screen and (max-width: 1023px) {
+  .cont-info1 {
+    height: 300px; }
+    .cont-info1 h1 {
+      margin-bottom: 20px; } }
