--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,14 +3,15 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
 }
 
 #body{
     background: gray;
+    overflow: hidden;
 }
 
-.contPrin-carrousel{
+/*.contPrin-carrousel{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -111,5 +112,51 @@
         opacity: 1;
         transform: translate(0);
         filter: blur(0);
+    }
+}*/
+
+#margen{
+    margin: 0;
+    padding: 0;
+}
+
+.cont-info1{
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 200px;
+    background-color: #1f1f1f;
+    text-align: center;
+    h1{
+        color: white;
+        transition: transform 0.3s ease, text-shadow 0.3s ease;
+        &:hover{
+            transform: scale(1.1);
+            text-shadow: 4px 4px 6px rgba(255, 221, 221, 0.7);
+        }
+    }
+    p{
+        padding: 0 10% 0 10%;
+        color: white;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        transition: transform 0.3s ease, text-shadow 0.3s ease;
+        &:hover{
+            transform: scale(1.1);
+            text-shadow: 4px 4px 6px rgba(255, 221, 221, 0.7);
+        }
+    }
+}
+
+.cont-decoracion{
+    background-color: #1f1f1f;
+}
+
+@media screen and (max-width: 1023px){
+    .cont-info1{
+        height: 300px;
+        h1{
+            margin-bottom: 20px;
+        }
     }
 }
