--- a/scss/_tenis.scss
+++ b/scss/_tenis.scss
@@ -1,11 +1,103 @@
 @import "menu";
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Griffy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 *{
     padding: 0;
     margin: 0;
+    font-family: "Poppins", sans-serif;
 }
 
+#margen{
+    padding: 0;
+    margin: 0;
+}
 
-.parrafoT{
-    color: red;
+.contenedorTe-imagen1-info1{
+    will-change: filter;
+    background-image: url(../assets/imagenes/tenis1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    filter: grayscale(100%);
+    transition: filter 10s ease;
+    .contenedorTe-info1{
+        height: 300px;
+        width: 50%;
+        margin-right: 20px;
+        .contenedorTe-info1-h1{
+            height: 50px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+        }
+        .contenedorTe-info1-p1{
+            height: 250px;
+            width: 100%;
+            font-size: 20px;
+            text-align: center;
+            display: flex;
+            align-items: center;
+        }
+        
+    }
+    &:hover{
+        filter: saturate(200%) grayscale(0%);
+        .contenedorTe-info1{
+            backdrop-filter: blur(5px);
+            border: solid black 1px;
+            border-radius: 12px;
+            .contenedorTe-info1-h1{
+                background-color: #f1eded;
+                border-top-left-radius: 12px;
+                border-top-right-radius: 12px;
+                
+            }
+            .contenedorTe-info1-p1{
+                color: white;
+            }
+        }
+    }
+    
+}
+
+/* mapa */
+
+.contenedorTe-grande-mapa{
+    margin-top: 100px;
+    background-color: white;
+    width: 100%;
+    height: 550px;
+    display: flex;
+    align-items: center;
+    .contenedorTe-mapa{
+        width: 100%;
+        height: 540px;
+        background-color: aqua;
+        iframe{
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
+@media screen and (max-width: 1023px){
+    .contenedorTe-imagen1-info1{
+        height: 800px;
+        display: flex;
+        justify-content: center;
+        .contenedorTe-info1{
+            height: 500px;
+            width: 80%;
+            .contenedorTe-info1-p1{
+                margin-top: 50px;
+                color: black;
+            }
+        }
+    }
 }
