--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Griffy&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 * {
   padding: 0;
   margin: 0; }
@@ -80,10 +81,82 @@
 
 * {
   padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif; }
+
+#margen {
+  padding: 0;
   margin: 0; }
 
-.parrafoT {
-  color: red; }
+.contenedorTe-imagen1-info1 {
+  will-change: filter;
+  background-image: url(../assets/imagenes/tenis1.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  filter: grayscale(100%);
+  transition: filter 10s ease; }
+  .contenedorTe-imagen1-info1 .contenedorTe-info1 {
+    height: 300px;
+    width: 50%;
+    margin-right: 20px; }
+    .contenedorTe-imagen1-info1 .contenedorTe-info1 .contenedorTe-info1-h1 {
+      height: 50px;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+    .contenedorTe-imagen1-info1 .contenedorTe-info1 .contenedorTe-info1-p1 {
+      height: 250px;
+      width: 100%;
+      font-size: 20px;
+      text-align: center;
+      display: flex;
+      align-items: center; }
+  .contenedorTe-imagen1-info1:hover {
+    filter: saturate(200%) grayscale(0%); }
+    .contenedorTe-imagen1-info1:hover .contenedorTe-info1 {
+      backdrop-filter: blur(5px);
+      border: solid black 1px;
+      border-radius: 12px; }
+      .contenedorTe-imagen1-info1:hover .contenedorTe-info1 .contenedorTe-info1-h1 {
+        background-color: #f1eded;
+        border-top-left-radius: 12px;
+        border-top-right-radius: 12px; }
+      .contenedorTe-imagen1-info1:hover .contenedorTe-info1 .contenedorTe-info1-p1 {
+        color: white; }
+
+/* mapa */
+.contenedorTe-grande-mapa {
+  margin-top: 100px;
+  background-color: white;
+  width: 100%;
+  height: 550px;
+  display: flex;
+  align-items: center; }
+  .contenedorTe-grande-mapa .contenedorTe-mapa {
+    width: 100%;
+    height: 540px;
+    background-color: aqua; }
+    .contenedorTe-grande-mapa .contenedorTe-mapa iframe {
+      width: 100%;
+      height: 100%; }
+
+@media screen and (max-width: 1023px) {
+  .contenedorTe-imagen1-info1 {
+    height: 800px;
+    display: flex;
+    justify-content: center; }
+    .contenedorTe-imagen1-info1 .contenedorTe-info1 {
+      height: 500px;
+      width: 80%; }
+      .contenedorTe-imagen1-info1 .contenedorTe-info1 .contenedorTe-info1-p1 {
+        margin-top: 50px;
+        color: black; } }
 
 * {
   margin: 0;
@@ -94,113 +167,17 @@
   background: gray;
   overflow: hidden; }
 
-/*.contPrin-carrousel{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    width: 1000px;
-    height: 600px;
-    background: #f5f5f5;
-    box-shadow: 0 30px 50px #dbdbdb;
-    
-    .contPrin-carrousel-slide{
+/*link a deportes1*/
+.link {
+  height: 700px;
+  width: 100%;
+  background-color: #ff002b; }
 
-        .contPrin-carrousel-slide-fondo{
-            width: 200px;
-            height: 300px;
-            position: absolute;
-            top: 50%;
-            transform: translate(0, -50%);
-            border-radius: 20px;
-            box-shadow: 0 30px 50px #505050;
-            background-position: 50% 50%;
-            background-size: cover;
-            display: inline-block;
-            transition: 0.5s;
-            .contPrin-carrousel-slide-fondo-info{
-                position: absolute;
-                top: 50%;
-                left: 100px;
-                width: 300px;
-                text-align: left;
-                color: #eee;
-                transform: translate(0, -50%);
-                font-family: system-ui;
-                display: none;
-            }
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(1){
-            top: 0;
-            left: 0;
-            transform: translate(0, 0);
-            border-radius: 0;
-            width: 100%;
-            height: 100%;
-            
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(2){
-            @extend .contPrin-carrousel-slide-fondo:nth-child(1);
-            
-            .contPrin-carrousel-slide-fondo-info{
-                display: block;
-                .contPrin-carrousel-slide-fondo-info-nombre{
-                    font-size: 40px;
-                    text-transform: uppercase;
-                    font-weight: bold;
-                    opacity: 0;
-                    animation: animar ease-in-out 0.2s 1 forwards;
-                }
-                .contPrin-carrousel-slide-fondo-info-descripcion{
-                    margin-top: 10px;
-                    margin-bottom: 20px;
-                    opacity: 0;
-                    animation: animar ease-in-out 0.3s 1 forwards;
-                }
-                button{
-                    padding: 10px 20px;
-                    border: none;
-                    cursor: pointer;
-                    opacity: 0;
-                    animation: animar ease-in-out 0.6s 1 forwards;
-                }
-            }
-        }
-
-        .contPrin-carrousel-slide-fondo:nth-child(3){
-            left: 50%;
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(4){
-            left: calc(50% + 220px);
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(5){
-            left: calc(50% + 440px);
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(n + 6){
-            left: calc(50% + 660px);
-            opacity: 0;
-        }
-
-            
-    }
-}
-
-@keyframes animar {
-    from{
-        opacity: 0;
-        transform: translate(0, 100px);
-        filter: blur(33px);
-    }
-    to{
-        opacity: 1;
-        transform: translate(0);
-        filter: blur(0);
-    }
-}*/
 #margen {
   margin: 0;
   padding: 0; }
 
+/*quienes somos*/
 .cont-info1 {
   flex-direction: column;
   display: flex;
@@ -225,7 +202,31 @@
       text-shadow: 4px 4px 6px rgba(255, 221, 221, 0.7); }
 
 .cont-decoracion {
-  background-color: #1f1f1f; }
+  background-color: #1f1f1f;
+  display: flex;
+  justify-content: space-around;
+  align-items: center; }
+  .cont-decoracion .imagen1 {
+    height: 100px;
+    width: 100px;
+    margin: -50px 0px 0px 0px;
+    transition: transform 0.5s ease; }
+    .cont-decoracion .imagen1:hover {
+      transform: rotate(30deg); }
+  .cont-decoracion .imagen2 {
+    height: 100px;
+    width: 100px;
+    margin: 45px 0px 0px 0px;
+    transition: transform 0.5s ease; }
+    .cont-decoracion .imagen2:hover {
+      transform: rotate(30deg); }
+  .cont-decoracion .imagen3 {
+    height: 100px;
+    width: 100px;
+    margin: -40px 0px 0px 0px;
+    transition: transform 0.5s ease; }
+    .cont-decoracion .imagen3:hover {
+      transform: rotate(30deg); }
 
 @media screen and (max-width: 1023px) {
   .cont-info1 {
