--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,114 +13,20 @@
     overflow: hidden;
 }
 
-/*.contPrin-carrousel{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    width: 1000px;
-    height: 600px;
-    background: #f5f5f5;
-    box-shadow: 0 30px 50px #dbdbdb;
-    
-    .contPrin-carrousel-slide{
+/*link a deportes1*/
 
-        .contPrin-carrousel-slide-fondo{
-            width: 200px;
-            height: 300px;
-            position: absolute;
-            top: 50%;
-            transform: translate(0, -50%);
-            border-radius: 20px;
-            box-shadow: 0 30px 50px #505050;
-            background-position: 50% 50%;
-            background-size: cover;
-            display: inline-block;
-            transition: 0.5s;
-            .contPrin-carrousel-slide-fondo-info{
-                position: absolute;
-                top: 50%;
-                left: 100px;
-                width: 300px;
-                text-align: left;
-                color: #eee;
-                transform: translate(0, -50%);
-                font-family: system-ui;
-                display: none;
-            }
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(1){
-            top: 0;
-            left: 0;
-            transform: translate(0, 0);
-            border-radius: 0;
-            width: 100%;
-            height: 100%;
-            
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(2){
-            @extend .contPrin-carrousel-slide-fondo:nth-child(1);
-            
-            .contPrin-carrousel-slide-fondo-info{
-                display: block;
-                .contPrin-carrousel-slide-fondo-info-nombre{
-                    font-size: 40px;
-                    text-transform: uppercase;
-                    font-weight: bold;
-                    opacity: 0;
-                    animation: animar ease-in-out 0.2s 1 forwards;
-                }
-                .contPrin-carrousel-slide-fondo-info-descripcion{
-                    margin-top: 10px;
-                    margin-bottom: 20px;
-                    opacity: 0;
-                    animation: animar ease-in-out 0.3s 1 forwards;
-                }
-                button{
-                    padding: 10px 20px;
-                    border: none;
-                    cursor: pointer;
-                    opacity: 0;
-                    animation: animar ease-in-out 0.6s 1 forwards;
-                }
-            }
-        }
-
-        .contPrin-carrousel-slide-fondo:nth-child(3){
-            left: 50%;
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(4){
-            left: calc(50% + 220px);
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(5){
-            left: calc(50% + 440px);
-        }
-        .contPrin-carrousel-slide-fondo:nth-child(n + 6){
-            left: calc(50% + 660px);
-            opacity: 0;
-        }
-
-            
-    }
+.link{
+    height: 700px;
+    width: 100%;
+    background-color: rgb(255, 0, 43);
 }
-
-@keyframes animar {
-    from{
-        opacity: 0;
-        transform: translate(0, 100px);
-        filter: blur(33px);
-    }
-    to{
-        opacity: 1;
-        transform: translate(0);
-        filter: blur(0);
-    }
-}*/
 
 #margen{
     margin: 0;
     padding: 0;
 }
+
+/*quienes somos*/
 
 .cont-info1{
     flex-direction: column;
@@ -150,9 +56,33 @@
     }
 }
 
+$margenes:(
+    1: -50px,
+    2: 45px,
+    3: -40px,
+);
+
+
+
 .cont-decoracion{
     background-color: #1f1f1f;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    @each $num, $margen in $margenes{
+        .imagen#{$num}{
+            height: 100px;
+            width: 100px;
+            margin: $margen 0px 0px 0px;
+            transition: transform 0.5s ease;
+            &:hover{
+                transform: rotate(30deg);
+            }
+        }
+    }
 }
+
+
 
 @media screen and (max-width: 1023px){
     .cont-info1{
