--- a/scss/_tenis.scss
+++ b/scss/_tenis.scss
@@ -69,19 +69,36 @@
 /* mapa */
 
 .contenedorTe-grande-mapa{
-    margin-top: 100px;
-    background-color: white;
     width: 100%;
-    height: 550px;
+    height: 400px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     .contenedorTe-mapa{
-        width: 100%;
-        height: 540px;
-        background-color: aqua;
+        margin-left: 10px;
+        height: 350px;
+        width: 60%;
+        display: flex;
+        align-items: center;
         iframe{
             width: 100%;
             height: 100%;
+        }
+    }
+    .contenedorTe-text-mapa{
+        width: auto;
+        height: auto;
+        margin-left: 20px;
+        .titulo-mapa{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            height: 50px;
+        }
+        .parrafo-mapa{
+            text-align: center;
+            color: black;
         }
     }
 }
