--- a/scss/_tenis.scss
+++ b/scss/_tenis.scss
@@ -23,7 +23,6 @@
     align-items: center;
     justify-content: end;
     filter: grayscale(100%);
-    transition: filter 10s ease;
     .contenedorTe-info1{
         height: 300px;
         width: 50%;
@@ -77,7 +76,7 @@
     .contenedorTe-mapa{
         margin-left: 10px;
         height: 350px;
-        width: 60%;
+        width: 80%;
         display: flex;
         align-items: center;
         iframe{
@@ -87,8 +86,11 @@
     }
     .contenedorTe-text-mapa{
         width: auto;
-        height: auto;
+        height: 200px;
         margin-left: 20px;
+        display: flex;
+        flex-wrap: wrap;
+
         .titulo-mapa{
             display: flex;
             align-items: center;
@@ -97,8 +99,40 @@
             height: 50px;
         }
         .parrafo-mapa{
-            text-align: center;
             color: black;
+        }
+    }
+
+}
+
+.contenedorTe-grande-tarjetas{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-image: url(../assets/imagenes/canchatenis.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    filter: grayscale(100%);
+    .tarjetaTe{
+        background-color: aqua;
+        width: 300px;
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        .contenedorTe-imagen{
+            width: 100%;
+            height: 150px;
+            background-color: red;
+        }
+        .titulo-tarjetaTe{
+            width: 100%;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     }
 }
@@ -115,6 +149,21 @@
                 margin-top: 50px;
                 color: black;
             }
+        }
+    }
+    .contenedorTe-grande-mapa{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        margin-top: 50px;
+        background-color: #ebe6e6;
+        .contenedorTe-mapa{
+            width: 100%;
+            margin-left: 0px;
+        }
+        .contenedorTe-text-mapa{
+            margin-top: 20px;
+            margin-left: 0px;
         }
     }
 }
