--- a/css/mainNat.css
+++ b/css/mainNat.css
@@ -71,7 +71,7 @@
 
 /* Cards Cuadradas */
 .contenedor {
-  margin: 60px 0px 0px 0px;
+  margin: 60px 0px 60px 0px;
   display: flex;
   width: 70%;
   justify-content: center;
@@ -105,8 +105,8 @@
 /* Cards de Gotas */
 .drop {
   position: relative;
-  width: 350px;
-  height: 350px;
+  width: 300px;
+  height: 300px;
   box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.05), 25px 35px 20px rgba(0, 0, 0, 0.05), 25px 30px 30px rgba(0, 0, 0, 0.05), inset -20px -20px 25px rgba(255, 255, 255, 0.9);
   transition: 0.5s ease-in-out; }
 
@@ -190,3 +190,30 @@
   height: 5px;
   border-radius: 5px;
   background-color: rgba(255, 255, 255, 0.5); }
+
+/* Puntos de Actividad */
+.contFut-grande-mapa {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 30px 0px 0px 0px;
+  background-color: red; }
+  .contFut-grande-mapa h1 {
+    font-size: 30px;
+    color: black;
+    display: flex;
+    justify-content: center;
+    margin: 30px 0px 0px 0px; }
+  .contFut-grande-mapa .linea {
+    width: 30%;
+    height: 3px;
+    background-color: black;
+    border-radius: 50px; }
+  .contFut-grande-mapa .contfut-mapa {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%; }
+    .contFut-grande-mapa .contfut-mapa iframe {
+      width: 100%; }
