--- a/scss/mainNat.scss
+++ b/scss/mainNat.scss
@@ -38,7 +38,7 @@
 
 /* Cards Cuadradas */
 .contenedor{
-    margin: 60px 0px 0px 0px;
+    margin: 60px 0px 60px 0px;
     display: flex;
     width: 70%;
     justify-content: center;
@@ -84,8 +84,8 @@
 
 .drop{
     position: relative;
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
     box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.05),
         25px 35px 20px rgba(0, 0, 0, 0.05),
         25px 30px 30px rgba(0, 0, 0, 0.05),
@@ -187,4 +187,38 @@
     height: 5px;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+/* Puntos de Actividad */
+
+.contFut-grande-mapa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 30px 0px 0px 0px;
+    background-color: red;
+    
+    h1{
+        font-size: 30px;
+        color: black;
+        display: flex;
+        justify-content: center;
+        margin: 30px 0px 0px 0px;
+    }
+    .linea{
+        width: 30%;
+        height: 3px;
+        background-color: black;
+        border-radius: 50px;
+    }
+    .contfut-mapa{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        iframe{
+            width: 100%;
+        }
+    }
 }
